--- a/first website.html
+++ b/first website.html
@@ -7,7 +7,7 @@
 	<style>
 	
 		a:link {
-			color: grey;
+			color: #FFBAAA;
 		}
 		
 		a:visited {
@@ -15,7 +15,7 @@
 		}
 		
 		a:hover {
-			color: blue; 
+			color: #cc4b09; 
 			font-family: Times New Roman;
 			font-size: 20pt; 
 		}
@@ -25,38 +25,42 @@
 		}
 		
 		body{
-			background-image: url('goosebumps.jpg');
 			background-repeat: no-repeat;
 			background-size: cover; 
-			background-color: white;
+			background-color: #cc4b09;
 			background-attachment: fixed;
 			background-position: center; 
-			color: blue;
+			color: #FFBAAA;
 			font-family: Calibri;
 			font-size: 50 pt;
 		}
 		div{
-			background-color: white;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
-			border: 2px solid grey;
+			background-color: #5D94FB;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
+			border: 25px solid #127C22;
 			border-radius: 100px;
 			margin-left: auto;
 			margin-right: auto;
-			margin-top: 100px; 
-			margin bottom: 200px;
+			margin-top: 50px; 
+			margin-bottom: 50px;
 			padding: 30px;
 			width: 800px;
 		}
 		h1{
+			border: 25px solid #cc4b09;
+			margin-left: 250px;
+			margin-right: 250px;
 			text-align: center;
-			color: blue;
 			font size: 200pt;
 		}
 		h2{
+			border: 20px solid #cc4b09;
+			margin-left: 275px;
+			margin-right: 275px;
 			text-align: center;
-			color: blue;
 		}
 		img{
-			float-left;
+			border: 10px solid #cc4b09;
+			float-center;
 		}
 		
 	</style>
@@ -67,9 +71,9 @@
 
 <div>
 
-<h1>Wii Sports!</h1>     
+<h1>SUPER MARIO BROS.</h1>     
 
-<img src="goosebumps.jpg"></img>
+<img src="mario.jpg"></img>
 
 <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed pellentesque blandit cursus. Phasellus condimentum maximus volutpat. In dui odio, rutrum a ante non, tempor elementum purus. Sed eleifend varius vehicula. Aliquam a sodales lacus, sed euismod orci.</p>
 	
@@ -89,8 +93,6 @@
 	Aliquam a sodales</p>
 
 <p><a href="https://en.wikipedia.org/wiki/Wii_Sports">More information on the game!</a></p>
-	
-<iframe width="560" height="315" src="https://www.youtube.com/embed/a-DOFcunPDo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
