--- a/first website.html
+++ b/first website.html
@@ -7,7 +7,7 @@
 	<style>
 	
 		a:link {
-			color: #FFBAAA;
+			color: #E67519;
 		}
 		
 		a:visited {
@@ -53,14 +53,23 @@
 			font size: 200pt;
 		}
 		h2{
-			border: 20px solid #cc4b09;
+			border: 15px solid #cc4b09;
 			margin-left: 275px;
 			margin-right: 275px;
 			text-align: center;
 		}
 		img{
 			border: 10px solid #cc4b09;
-			float-center;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		p{
+			border: 15px solid #F49809;
+			color: #E67519;
+			font-size: 15pt;
+			margin-left: 100px;
+			margin-right: 100px;
+			text-align: center;
 		}
 		
 	</style>
@@ -92,7 +101,7 @@
 	Interdum et malesuada
 	Aliquam a sodales</p>
 
-<p><a href="https://en.wikipedia.org/wiki/Wii_Sports">More information on the game!</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Super_Mario_Bros.">More information on the game!</a></p>
 
 </div>
 
