--- a/first website.html
+++ b/first website.html
@@ -45,14 +45,16 @@
 			padding: 30px;
 			width: 800px;
 		}
-		h1{
+		h1{	
+			background-color: #cc4b09; 
 			border: 25px solid #cc4b09;
 			margin-left: 250px;
 			margin-right: 250px;
 			text-align: center;
 			font size: 200pt;
 		}
-		h2{
+		h2{	
+			background-color: #cc4b09;
 			border: 15px solid #cc4b09;
 			margin-left: 275px;
 			margin-right: 275px;
@@ -63,7 +65,7 @@
 			margin-left: auto;
 			margin-right: auto;
 		}
-		p{
+		p{	background-color: #F49809; 
 			border: 15px solid #F49809;
 			color: #E67519;
 			font-size: 15pt;
