--- a/first website.html
+++ b/first website.html
@@ -7,7 +7,7 @@
 	<style>
 	
 		a:link {
-			color: #E67519;
+			color: #cc4b09;
 		}
 		
 		a:visited {
@@ -67,7 +67,7 @@
 		}
 		p{	background-color: #F49809; 
 			border: 15px solid #F49809;
-			color: #E67519;
+			color: #cc4b09;
 			font-size: 15pt;
 			margin-left: 100px;
 			margin-right: 100px;
