--- a/first website.html
+++ b/first website.html
@@ -16,8 +16,7 @@
 		
 		a:hover {
 			color: #cc4b09; 
-			font-family: Times New Roman;
-			font-size: 20pt; 
+			font-size: 16pt; 
 		}
 		
 		a:active {
@@ -27,7 +26,7 @@
 		body{
 			background-repeat: no-repeat;
 			background-size: cover; 
-			background-color: #cc4b09;
+			background-image: url('brick wall.jpg');
 			background-attachment: fixed;
 			background-position: center; 
 			color: #FFBAAA;
@@ -35,7 +34,7 @@
 			font-size: 50 pt;
 		}
 		div{
-			background-color: #5D94FB;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
+			background-color: #5D94FB;  
 			border: 25px solid #127C22;
 			border-radius: 100px;
 			margin-left: auto;
@@ -46,18 +45,18 @@
 			width: 800px;
 		}
 		h1{	
-			background-color: #cc4b09; 
-			border: 25px solid #cc4b09;
-			margin-left: 250px;
-			margin-right: 250px;
+			background-image: url('brick wall.jpg');
+			margin-left: 275px;
+			margin-right: 275px;
+			padding: 30px;
 			text-align: center;
 			font size: 200pt;
 		}
 		h2{	
-			background-color: #cc4b09;
-			border: 15px solid #cc4b09;
-			margin-left: 275px;
-			margin-right: 275px;
+			background-image: url('brick wall.jpg');
+			margin-left: 290px;
+			margin-right: 290px;
+			padding: 30px;
 			text-align: center;
 		}
 		img{
@@ -65,12 +64,13 @@
 			margin-left: auto;
 			margin-right: auto;
 		}
-		p{	background-color: #F49809; 
-			border: 15px solid #F49809;
+		p{	background-image: url('metal.jpg'); 
+			border: 6px solid #cc4b09;
 			color: #cc4b09;
 			font-size: 15pt;
-			margin-left: 100px;
-			margin-right: 100px;
+			margin-left: 225px;
+			margin-right: 225px;
+			padding: 20px;
 			text-align: center;
 		}
 		
